# aws-devops-mastery

./: .gitignore  AWS_DevOps_Mastery_Roadmap.md  GITOPS_IMPLEMENTATION_GUIDE.md  README.md
.github/workflows/: deploy-microservices.yml  test-oidc.yml
services/java-service/: .dockerignore  Dockerfile  java-service-deployment.yaml  java-service-service.yaml  pom.xml
services/java-service/src/main/java/com/example/javaservice/: ApiController.java  JavaServiceApplication.java
services/java-service/src/main/resources/: application.properties
services/javascript-api/: Dockerfile  index.js  javascript-api-deployment.yaml  javascript-api-service.yaml  package-lock.json  package.json
services/rust-processor/: .dockerignore  Cargo.toml  Dockerfile  rust-processor-deployment.yaml  rust-processor-service.yaml
services/rust-processor/src/: main.rs
terraform/bootstrap/: main.tf
terraform/environments/dev/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/environments/production/: backend.tf
terraform/environments/staging/: backend.tf  main.tf  outputs.tf  variables.tf
terraform/modules/github-oidc/: policies.tf
terraform/modules/terraform-state/: main.tf  outputs.tf  variables.tf
